--- a/app/src/main/res/layout/activity_barcode_scanner_view.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner_view.xml
@@ -9,13 +9,5 @@
     <io.scanbot.sdk.barcode.ui.BarcodeScannerView
         android:id="@+id/barcode_scanner_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
-
-    <TextView
-        android:id="@+id/barcode_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="8dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
