Implement detection on the image use case

--- a/app/src/main/res/layout/activity_detection_on_the_image.xml
+++ b/app/src/main/res/layout/activity_detection_on_the_image.xml
@@ -1,21 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="8dp"
     tools:context=".usecases.SingleBarcodeActivity">
 
-    <io.scanbot.sdk.barcode.ui.BarcodeScannerView
-        android:id="@+id/barcode_scanner_view"
+    <Button
+        android:id="@+id/import_image_button"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:layout_height="wrap_content"
+        android:text="Import image" />
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/barcode_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
