--- a/app/src/main/res/layout/main_item_support.xml
+++ b/app/src/main/res/layout/main_item_support.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/scanbot_secondary"
+        android:backgroundTint="?colorSecondaryVariant"
         app:contentPadding="8dp">
 
         <LinearLayout
